try to fix zoom on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -124,7 +124,7 @@
 
 .my-sidebar { 
   min-height: 100vh;
-  height: auto;
+  height: 100%;
   padding: 40px 0;
   background-color: rgb(249, 249, 249);
   position: fixed !important;
